tests/paczka1/small_fuzzy/83555690.err
Error in line 1: ZZIZwi9T S787 47,1
Error in line 7: S382 A245 58,0
